[package]
name = "leetcli"
version = "0.1.5"
edition = "2021"
authors = ["Suraj chauhan surajssc1232@gmail.com"]
description = "A CLI tool that generates random LeetCode problems with skeleton code using AI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/surajssc1232/leetcli"
homepage = "https://github.com/surajssc1232/leetcli"
documentation = "https://docs.rs/leetcli"
readme = "README.md"
keywords = ["leetcode", "cli", "coding", "practice", "algorithms"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["problems/"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
inquire = "0.7"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
sha2 = "0.10"
